--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-    <title>Flower for you ❤️</title>
+    <title>Flowers for you ❤️</title>
     <link rel="icon" id="favicon" href="image/1.png">
   <link rel="stylesheet" href="./style.css">
 
